[project]
name = "rag"
version = "0.1.0"
description = "Clean local RAG pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-chroma>=0.1.0",
    "langchain-ollama>=0.1.0",
    "pypdf>=4.0.0",
    "unstructured>=0.23.1",
    "openpyxl>=3.1.5",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "streamlit>=1.58.0",
    "cryptography>=49.0.0",
    "networkx>=3.6.1",
    "msoffcrypto-tool>=6.0.0",
    "chardet>=7.4.3",
    "ipython>=9.15.0",
]
